--- a/examples/notebooks/environment.yml
+++ b/examples/notebooks/environment.yml
@@ -10,4 +10,6 @@ dependencies:
   - ipywidgets = 7.6.5
   - scipy = 1.7.3
   - numba = 0.55.1
-  - safepython = 0.1.1
+  - pip
+  - pip:
+    - safepython = 0.1.1
