--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,12 @@ channels:
   - defaults
 dependencies:
   - python=3.7
+  - numpy = 1.21.5
+  - matplotlib = 3.5.1
+  - ipywidgets = 7.6.5
+  - scipy = 1.7.3
+  - numba = 0.55.1
+  - matplotlib-inline
   - pip
   - pip:
     - safepython == 0.1.1
